// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CodeBlock /> should match snapshot 1`] = `
<div>
  <div
    class="css-1aeqb5q"
  >
    <div
      class="css-1nkroav"
    >
      <div
        class="css-17sgjnn"
      >
        javascript
      </div>
      <button
        aria-label="copy content"
        class="css-1qcwrfm"
        type="button"
      >
        <i
          class="material-icons-outlined css-165xn9n"
        >
          content_copy
        </i>
      </button>
      <pre
        class="css-lrw80b"
      >
        <code
          class="language-javascript css-38t3yv"
        >
          <span
            class="hljs-variable language_ css-1yz7e9k"
            style="color: rgb(171, 86, 86);"
          >
            <span>
              console
            </span>
          </span>
          <span
            class="css-1yz7e9k"
          >
            <span>
              .
            </span>
          </span>
          <span
            class="hljs-title function_ css-1yz7e9k"
            style="color: rgb(136, 0, 0); font-weight: bold;"
          >
            <span>
              log
            </span>
          </span>
          <span
            class="css-1yz7e9k"
          >
            <span>
              (
            </span>
          </span>
          <span
            class="hljs-string css-1yz7e9k"
            style="color: rgb(136, 0, 0);"
          >
            <span>
              'Hello World'
            </span>
          </span>
          <span
            class="css-1yz7e9k"
          >
            <span>
              );
            </span>
          </span>
        </code>
      </pre>
    </div>
  </div>
</div>
`;

exports[`<CodeBlock /> should render a footer 1`] = `
<div>
  <div
    class="css-1aeqb5q"
  >
    <div
      class="css-1nkroav"
    >
      <button
        aria-label="copy content"
        class="css-1qcwrfm"
        type="button"
      >
        <i
          class="material-icons-outlined css-165xn9n"
        >
          content_copy
        </i>
      </button>
      <pre
        class="css-lrw80b"
      >
        <code
          class="css-38t3yv"
        >
          <span
            class="hljs-built_in css-1yz7e9k"
            style="color: rgb(57, 115, 0);"
          >
            <span>
              test
            </span>
          </span>
        </code>
      </pre>
      <div
        class="css-brqcfw"
      >
        example footer
      </div>
    </div>
  </div>
</div>
`;
